# Game-Server

./: CMakeLists.txt
Source/: Main.cpp  main.c
Source/Network/: Addresses.cpp  Addresses.h  NetLogger.h  Packet.h  Platforms.cpp  Server.cpp  Server.h  Socket.cpp  Socket.h  UDPNet.h
Source/Network/UDPNet/: Addresses.c  Addresses.h  Defs.h  NetLogger.c  NetLogger.h  NetUtils.c  NetUtils.h  Packet.c  Packet.h  Platforms.c  Platforms.h  Server.c  Server.h  ServerOperations.c  ServerOperations.h  Socket.c  Socket.h
